--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,9 +17,7 @@
     {% if site.show_menu == 1 %}
         {% if site.pages %}
         <div class="mainmenu">
-            <p>{{ site.baseurl }} - {{site.url}}</p>
-            <p>{{ page.url }}</p>
-            <a href="{{ site.baseurl | prepend: site.url }}" {% if page.url =="/" %}class="active"{% endif %}>Home</a>
+            <a href="/" {% if page.url =="/" %}class="active"{% endif %}>Home</a>
             {% for p in site.pages %}
                 {% if p.layout == 'page' or p.layout == 'project' %}
                     <a href="{{ p.url | prepend: site.baseurl | prepend: site.url }}" {% if p.url == page.url %}class="active"{% endif %}>{{ p.title }}</a>
