--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,6 @@
         </div>
 
         {% include scripts.html %}
+        <script id="dsq-count-scr" src="//jitendramalakalapalli.disqus.com/count.js" async></script>
     </body>
 </html>
