--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -212,4 +212,15 @@ pre {
 	margin-top: 0;
 }
 
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+td{
+	border: 2px solid #dddddd;
+	text-align: left;
+	padding: 8px;
+}
+
 @import "responsive";
