--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
         <div class="mainmenu">
             <a href="/" {% if page.url =="/" %}class="active"{% endif %}>Home</a>
             {% for p in site.pages %}
-                {% if p.layout == 'page' or p.title == "Projects" %}
+                {% if p.layout == 'page' or p.title == "Projects" or p.title == "Science and Mathematics 101" %}
                     <a href="{{ p.url | prepend: site.baseurl | prepend: site.url }}" {% if p.url == page.url %}class="active"{% endif %}>{{ p.title }}</a>
                 {% endif %}
             {% endfor %}
